--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 
     <repositories>
       <repository>
-        <id>my-local-repo</id>
-        <url>file://${project.basedir}/src/main/resources</url>
+        <id>local-maven-repo</id>
+        <url>file://${project.basedir}/local-maven-repo</url>
       </repository>
     </repositories>
 
